--- a/mysql-local/docker-compose.yml
+++ b/mysql-local/docker-compose.yml
@@ -9,11 +9,9 @@ services:
       - "3306:3306"
     volumes:
       - mysql_local_volume:/var/lib/mysql
-    networks:
-      - mysql_local_network
 
 volumes:
   mysql_local_volume:
   
 networks:
-  mysql_local_network:
+  default:
