--- a/elk-local/.env
+++ b/elk-local/.env
@@ -1,3 +1,3 @@
 # change this name to other local compose dir name 
 # if you want to test this setup with other local compose network
-# COMPOSE_PROJECT_NAME=marketing-automation
+COMPOSE_PROJECT_NAME=mark
